i18n with Flask-Babel

--- a/todoism/templates/_intro.html
+++ b/todoism/templates/_intro.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="center">
         <h2 class="teal-text text-lighten-2">Todoism</h2>
-        <h5 class="light">We are todoist, we use todoism.</h5>
+        <h5 class="light">{{ _('We are todoist, we use todoism.') }}</h5>
         <div class="row center-block">
             <div class="fake-browser-ui hoverable card-panel">
                 <div class="frame">
@@ -11,11 +11,11 @@
                     <span class="blue"></span>
                     <span class="orange"></span>
                 </div>
-                <img class="responsive-img" src="{{ url_for('static', filename='demo.png') }}">
+                <img class="responsive-img" src="{{ url_for('static', filename=_('demo.png')) }}">
             </div>
         </div>
         <div class="row">
-            <a href="#login" class="btn waves-effect waves-light red">Get Started</a>
+            <a href="#login" class="btn waves-effect waves-light red">{{ _('Get Started') }}</a>
         </div>
     </div>
 {% endblock %}
