--- a/todoism/templates/errors.html
+++ b/todoism/templates/errors.html
@@ -19,7 +19,7 @@
             <span class="active-item">{{ code }} - {{ info }}</span>
         </span>
         <span class="col s2">
-            <a class="button right" href="{{ url_for('home.index') }}">Back Home</a>
+            <a class="button right" href="{{ url_for('home.index') }}">{{ _('Back Home') }}</a>
         </span>
     </div>
 </main>
